--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -121,12 +121,12 @@
     <string name="security_amen_title">सुरक्षा सुविधाएं जोड़ें</string>
     <string name="other_amen_title">अन्य सुविधाएं जोड़ें</string>
     <string name="amen_title">सुविधाएं जोड़ें</string>
-    <string name="dhaba_name">Dhaba Name</string>
-    <string name="dhaba_address">Dhaba address</string>
+    <string name="dhaba_name">ढाबा नाम</string>
+    <string name="dhaba_address">ढाबा पता</string>
     <string name="fetch_location">वर्तमान स्थान</string>
-    <string name="landmark">Landmark</string>
-    <string name="area">Area</string>
-    <string name="pin_code">Pin code</string>
+    <string name="landmark">सीमाचिह्न</string>
+    <string name="area">क्षेत्र</string>
+    <string name="pin_code">पिन कोड</string>
     <string name="upload_dhaba_pictures">ढाबा चित्र अपलोड करें</string>
     <string name="save_as_draft">ड्राफ्ट के रूप में सेव करें</string>
     <string name="owner_name">मालिक का नाम</string>
@@ -290,4 +290,20 @@
     <string name="choose_language">भाषा चुनें</string>
     <string name="update_other_amen">अन्य सुविधाएं अपडेट करें</string>
     <string name="upload_barber_photo">Upload Barber Photo</string>
+    <string name="enter_owner_name">Please Enter Owner Name</string>
+    <string name="enter_phone_number">Please enter Phone Number</string>
+    <string name="enter_email">Please Enter Email Id</string>
+    <string name="enter_valid_email">Please Enter Valid Email Id</string>
+    <string name="enter_address">Please Enter Address</string>
+    <string name="enter_pan_number">Please Enter Pan Number</string>
+    <string name="enter_adhar_number">Please Aadhar Card Number</string>
+    <string name="select_owner_picture">Please Select Owner Picture</string>
+    <string name="enter_landmark">Please Enter Landmark</string>
+    <string name="enter_area">Please Enter Area Name</string>
+    <string name="enter_highway">Please Enter Highway Name</string>
+    <string name="enter_pincode">Please Enter Pincode</string>
+    <string name="select_property_status">Please Select Property Status</string>
+    <string name="select_dhaba_image">Please Select Dhaba Image</string>
+    <string name="enter_bank_name">Please Enter Bank Name</string>
+    <string name="enter_gst_number">Please Enter GST Number</string>
 </resources>
