Client feedback done except location selection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -304,6 +304,8 @@
     <string name="choose_tower_light_photo">Please choose Tower Light photo</string>
     <string name="choose_bulb_light_photo">Please choose Bulb Light photo</string>
     <string name="add_new">Add New</string>
+    <string name="enter_bank_account_number">Please Enter Bank Account Number</string>
+    <string name="account_number">Bank Account Number</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
