--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="appName">Transport Mall</string>
+    <string name="googleMapsApiKey">AIzaSyAYJCariN6djEQQDnt6hy482EeCV4sRVYQ</string>
     <string name="email">Email Address</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
@@ -306,6 +307,7 @@
     <string name="add_new">Add New</string>
     <string name="enter_bank_account_number">Please Enter Bank Account Number</string>
     <string name="account_number">Bank Account Number</string>
+    <string name="please_choose_address">Please choose address.</string>
 
     <string-array name="select_highway_number">
         <item>Select National Highway Number</item>
