translations and bug fixes

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -263,7 +263,7 @@
     <string name="enter_dhaba_name">कृपया ढाबा नाम दर्ज करें।</string>
     <string name="location_alert_dialog">स्थान सेवा सक्षम नहीं है, क्या आप इसे सक्षम करना चाहते हैं?</string>
     <string name="unable_to_fetch_address">आपका वर्तमान पता लाने में असमर्थ।</string>
-    <string name="assigned_to">Assigned To</string>
+    <string name="assigned_to">को सौंपा</string>
 
     <string-array name="menu_array_fiels_ex">
         <item>@string/dhaba_mnagement</item>
@@ -289,22 +289,50 @@
     </integer-array>
     <string name="choose_language">भाषा चुनें</string>
     <string name="update_other_amen">अन्य सुविधाएं अपडेट करें</string>
-    <string name="upload_barber_photo">Upload Barber Photo</string>
-    <string name="enter_owner_name">Please Enter Owner Name</string>
-    <string name="enter_phone_number">Please enter Phone Number</string>
-    <string name="enter_email">Please Enter Email Id</string>
-    <string name="enter_valid_email">Please Enter Valid Email Id</string>
-    <string name="enter_address">Please Enter Address</string>
-    <string name="enter_pan_number">Please Enter Pan Number</string>
-    <string name="enter_adhar_number">Please Aadhar Card Number</string>
-    <string name="select_owner_picture">Please Select Owner Picture</string>
-    <string name="enter_landmark">Please Enter Landmark</string>
-    <string name="enter_area">Please Enter Area Name</string>
-    <string name="enter_highway">Please Enter Highway Name</string>
-    <string name="enter_pincode">Please Enter Pincode</string>
-    <string name="select_property_status">Please Select Property Status</string>
-    <string name="select_dhaba_image">Please Select Dhaba Image</string>
-    <string name="enter_bank_name">Please Enter Bank Name</string>
-    <string name="enter_gst_number">Please Enter GST Number</string>
+    <string name="upload_barber_photo">नाई की फोटो अपलोड करें</string>
+    <string name="enter_owner_name">कृपया मालिक का नाम एंटर करें</string>
+    <string name="enter_phone_number">कृपया फ़ोन नंबर एंटर करें</string>
+    <string name="enter_email">कृपया ईमेल आईडी एंटर करें</string>
+    <string name="enter_valid_email">कृपया मान्य ईमेल आईडी एंटर करें</string>
+    <string name="enter_address">कृपया पता एंटर करें</string>
+    <string name="enter_pan_number">कृपया पैन नंबर एंटर करें</string>
+    <string name="enter_adhar_number">कृपया आधार कार्ड नंबर</string>
+    <string name="select_owner_picture">कृपया स्वामी चित्र का चयन करें</string>
+    <string name="enter_landmark">कृपया लैंडमार्क एंटर करें</string>
+    <string name="enter_area">कृपया क्षेत्र का नाम एंटर करें</string>
+    <string name="enter_highway">कृपया राजमार्ग का नाम एंटर करें</string>
+    <string name="enter_pincode">कृपया पिनकोड एंटर करें</string>
+    <string name="select_property_status">कृपया संपत्ति की स्थिति चुनें</string>
+    <string name="select_dhaba_image">कृपया ढाबा फोटो का चयन करें</string>
+    <string name="enter_bank_name">कृपया बैंक का नाम एंटर करें</string>
+    <string name="enter_gst_number">कृपया जीएसटी नंबर एंटर करें</string>
     <string name="add_new">नया जोड़ें</string>
+    <string name="enter_ifsc_code">कृपया IFSC कोड एंटर करें</string>
+    <string name="enter_account_holder_name">कृपया खाता धारक का नाम एंटर करें</string>
+    <string name="choose_pan_card_photo">कृपया पैन कार्ड फोटो चुनें</string>
+    <string name="choose_food_license_option">कृपया खाद्य लाइसेंस विकल्प चुनें</string>
+    <string name="select_license_photo">कृपया फूड लाइसेंस फोटो का चयन करें</string>
+    <string name="select_ro_water_option">कृपया आरओ वाटर विकल्प चुनें</string>
+    <string name="select_food_type">कृपया खाद्य प्रकार विकल्प चुनें</string>
+    <string name="choose_atlease_one_photo">कृपया कम से कम 1 फ़ूड फ़ोटो चुनें</string>
+    <string name="choose_bed_charpai">कृपया बिस्तर/चारपाई विकल्प चुनें</string>
+    <string name="choose_no_of_beds">कृपया बिस्तरों की संख्या चुनें</string>
+    <string name="choose_photo">कृपया एक फोटो चुनें</string>
+    <string name="choose_fan">कृपया सीलिंग फैन विकल्प चुनें</string>
+    <string name="choose_cooler">कृपया कूलर विकल्प चुनें</string>
+    <string name="choose_enclosed">कृपया बंद विकल्प चुनें</string>
+    <string name="choose_if_open">कृपया चुनें कि क्या यह खुला है</string>
+    <string name="choose_hot_water">कृपया हॉट वाटर बैग विकल्प चुनें</string>
+    <string name="choose_washroom_status">कृपया शौचालय की स्थिति चुनें।</string>
+    <string name="choose_hot_and_cold_water">कृपया गर्म और ठंडे पानी का विकल्प चुनें।</string>
+    <string name="choose_truck_show_clean">कृपया ट्रक शो क्लीन विकल्प चुनें।</string>
+    <string name="choose_verification_photo">कृपया पुलिस वेरिफिकेशन फोटो चुनें।</string>
+    <string name="choose_indoor_camera_photo">कृपया इनडोर कैमरे की तस्वीरें चुनें।</string>
+    <string name="choose_outdoor_camera_photo">कृपया आउटडोर कैमरे की तस्वीरें चुनें।</string>
+    <string name="choose_tower_light_photo">कृपया टावर लाइट फोटो चुनें</string>
+    <string name="choose_bulb_light_photo">कृपया बल्ब लाइट फोटो चुनें</string>
+    <string name="enter_bank_account_number">कृपया बैंक खाता संख्या दर्ज करें</string>
+    <string name="account_number">बैंक खाता संख्या</string>
+    <string name="please_choose_address">कृपया पता चुनें।</string>
+    <string name="select_food_at_100">कृपया 100 विकल्प पर भोजन चुनें</string>
 </resources>
