--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -228,35 +228,35 @@
     <string name="click_on_map_to_get_address">ਪਤਾ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ ਨਕਸ਼ੇ \'ਤੇ ਕਲਿਕ ਕਰੋ</string>
     <string name="update_dhaba">ਢਾਬਾ ਅਪਡੇਟ ਕਰੋ</string>
     <string name="fetching_states_cities_highways">ਰਾਜ, ਸ਼ਹਿਰ ਅਤੇ ਰਾਜਮਾਰਗ ਪ੍ਰਾਪਤ ਕੀਤੇ ਜਾ ਰਹੇ ਹਨ</string>
-    <string name="update">Update</string>
-    <string name="gallery">Gallery</string>
-    <string name="camera">Camera</string>
-    <string name="select_video_source">Select Video Source</string>
-    <string name="saving_dhaba_details">Saving Dhaba Details</string>
-    <string name="updating_dhaba_details">Updating Dhaba Details</string>
-    <string name="dhaba_updated_successfully">Dhaba Details Updated Successfully</string>
-    <string name="updated_successfully">Updated Successfully</string>
-    <string name="search_highway">Search Highway</string>
-    <string name="update_food_amen">Update food amenities</string>
-    <string name="update_light_amen">Update light amenities</string>
-    <string name="update_security_amen">Update security amenities</string>
-    <string name="update_washroom_amen">Update washroom amenities</string>
-    <string name="update_sleeping_amen">Update sleeping amenities</string>
-    <string name="update_parking_amen">Update parking amenities</string>
-    <string name="update_amen">Update Amenities</string>
-    <string name="updating_owner">Updating Owner Details</string>
-    <string name="photo_deleted">Photo deleted successfully.</string>
-    <string name="_10_digit_mobile_number">10 Digit mobile number</string>
-    <string name="profile_updated">Profile updated successfully</string>
-    <string name="please_enter_name">Please enter your name</string>
-    <string name="enter_email_id">Please enter a valid Email-ID</string>
-    <string name="enter_mobile_number">Please enter mobile number</string>
-    <string name="updating_profile">Updating profile..</string>
-    <string name="enter_dhaba_name">Please enter dhaba name.</string>
-    <string name="location_alert_dialog">Location service is not enabled, do you want to enable it?</string>
-    <string name="unable_to_fetch_address">Unable fetch your current address.</string>
-    <string name="assigned_to">Assigned To</string>
-    <string name="upload_barber_photo">Upload Barber Photo</string>
+    <string name="update">ਅਪਡੇਟ</string>
+    <string name="gallery">ਗੈਲਰੀ</string>
+    <string name="camera">ਕੈਮਰਾ</string>
+    <string name="select_video_source">ਵੀਡੀਓ ਸਰੋਤ ਚੁਣੋ</string>
+    <string name="saving_dhaba_details">ਢਾਬਾ  ਵੇਰਵੇ ਨੂੰ ਸੰਭਾਲਿਆ ਜਾ ਰਿਹਾ ਹੈ</string>
+    <string name="updating_dhaba_details">ਢਾਬਾ  ਵੇਰਵੇ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ</string>
+    <string name="dhaba_updated_successfully">ਢਾਬਾ  ਵੇਰਵੇ ਸਫਲਤਾਪੂਰਵਕ ਅਪਡੇਟ ਕੀਤੇ ਗਏ</string>
+    <string name="updated_successfully">ਸਫਲਤਾਪੂਰਵਕ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ</string>
+    <string name="search_highway">ਹਾਈਵੇ ਦੀ ਖੋਜ ਕਰੋ</string>
+    <string name="update_food_amen">ਭੋਜਨ ਸਹੂਲਤਾਂ ਨੂੰ ਅਪਡੇਟ ਕਰੋ</string>
+    <string name="update_light_amen">ਲਾਈਟ ਸਹੂਲਤਾਂ ਨੂੰ ਅਪਡੇਟ ਕਰੋ</string>
+    <string name="update_security_amen">ਸੁਰੱਖਿਆ ਸਹੂਲਤਾਂ ਨੂੰ ਅਪਡੇਟ ਕਰੋ</string>
+    <string name="update_washroom_amen">ਵਾਸ਼ਰੂਮ ਸਹੂਲਤਾਂ ਨੂੰ ਅਪਡੇਟ ਕਰੋ</string>
+    <string name="update_sleeping_amen">ਸੌਣ ਦੀਆਂ ਸਹੂਲਤਾਂ ਨੂੰ ਅਪਡੇਟ ਕਰੋ</string>
+    <string name="update_parking_amen">ਅਪਡੇਟ ਕੀਤੀ ਪਾਰਕਿੰਗ ਸਹੂਲਤਾਂ</string>
+    <string name="update_amen">ਸਹੂਲਤਾਂ ਨੂੰ ਅਪਡੇਟ ਕਰੋ</string>
+    <string name="updating_owner">ਮਾਲਕ ਦੇ ਵੇਰਵੇ ਅਪਡੇਟ ਕੀਤੇ ਜਾ ਰਹੇ ਹਨ</string>
+    <string name="photo_deleted">ਫੋਟੋ ਸਫਲਤਾਪੂਰਵਕ ਮਿਟਾਈ ਗਈ.</string>
+    <string name="_10_digit_mobile_number">10 ਅੰਕ ਦਾ ਮੋਬਾਈਲ ਨੰਬਰ</string>
+    <string name="profile_updated">ਪ੍ਰੋਫਾਈਲ ਸਫਲਤਾਪੂਰਵਕ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ</string>
+    <string name="please_enter_name">ਕਿਰਪਾ ਕਰਕੇ ਆਪਣਾ ਨਾਮ ਦਰਜ ਕਰੋ</string>
+    <string name="enter_email_id">ਕਿਰਪਾ ਕਰਕੇ ਇੱਕ ਵੈਧ ਈਮੇਲ-ਆਈਡੀ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_mobile_number">ਕਿਰਪਾ ਕਰਕੇ ਮੋਬਾਈਲ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
+    <string name="updating_profile">ਪ੍ਰੋਫਾਈਲ ਅਪਡੇਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ ..</string>
+    <string name="enter_dhaba_name">ਕਿਰਪਾ ਕਰਕੇ ਢਾਬਾ  ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ.</string>
+    <string name="location_alert_dialog">ਟਿਕਾਣਾ ਸੇਵਾ ਯੋਗ ਨਹੀਂ ਹੈ, ਕੀ ਤੁਸੀਂ ਇਸਨੂੰ ਸਮਰੱਥ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?</string>
+    <string name="unable_to_fetch_address">ਆਪਣਾ ਮੌਜੂਦਾ ਪਤਾ ਪ੍ਰਾਪਤ ਕਰਨ ਨੂੰ ਸਮਰੱਥ</string>
+    <string name="assigned_to">ਨੂੰ ਦਿੱਤਾ</string>
+    <string name="upload_barber_photo">ਨਾਈ ਦੀ ਫੋਟੋ ਅਪਲੋਡ ਕਰੋ</string>
 
     <string-array name="menu_array">
         <item>@string/dhaba_mnagement</item>
@@ -274,22 +274,51 @@
     </string-array>
     <string name="choose_language">ਭਾਸ਼ਾ ਚੁਣੋ</string>
     <string name="upload_sleeping_amenities_photo">" ਸੌਣ ਵਾਲੀਆਂ ਸਹੂਲਤਾਂ ਦੀ ਫੋਟੋ ਅਪਲੋਡ ਕਰੋ"</string>
-    <string name="enter_owner_name">Please Enter Owner Name</string>
-    <string name="enter_phone_number">Please enter Phone Number</string>
-    <string name="enter_email">Please Enter Email Id</string>
-    <string name="enter_valid_email">Please Enter Valid Email Id</string>
-    <string name="enter_address">Please Enter Address</string>
-    <string name="enter_pan_number">Please Enter Pan Number</string>
-    <string name="enter_adhar_number">Please Aadhar Card Number</string>
-    <string name="select_owner_picture">Please Select Owner Picture</string>
-    <string name="enter_landmark">Please Enter Landmark</string>
-    <string name="enter_area">Please Enter Area Name</string>
-    <string name="enter_highway">Please Enter Highway Name</string>
-    <string name="enter_pincode">Please Enter Pincode</string>
-    <string name="select_property_status">Please Select Property Status</string>
-    <string name="select_dhaba_image">Please Select Dhaba Image</string>
-    <string name="enter_bank_name">Please Enter Bank Name</string>
-    <string name="enter_gst_number">Please Enter GST Number</string>
+    <string name="enter_owner_name">ਕਿਰਪਾ ਕਰਕੇ ਮਾਲਕ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ</string>
+    <string name="enter_phone_number">ਕਿਰਪਾ ਕਰਕੇ ਫ਼ੋਨ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_email">ਕਿਰਪਾ ਕਰਕੇ ਈਮੇਲ ਆਈਡੀ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_valid_email">ਕਿਰਪਾ ਕਰਕੇ ਵੈਧ ਈਮੇਲ ਆਈਡੀ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_address">ਕਿਰਪਾ ਕਰਕੇ ਪਤਾ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_pan_number">ਕਿਰਪਾ ਕਰਕੇ ਪੈਨ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_adhar_number">ਕਿਰਪਾ ਕਰਕੇ ਆਧਾਰ ਕਾਰਡ ਨੰਬਰ</string>
+    <string name="select_owner_picture">ਕਿਰਪਾ ਕਰਕੇ ਮਾਲਕ ਦੀ ਤਸਵੀਰ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="enter_landmark">ਕਿਰਪਾ ਕਰਕੇ ਲੈਂਡਮਾਰਕ ਦਾਖਲ ਕਰੋ</string>
+    <string name="enter_area">ਕਿਰਪਾ ਕਰਕੇ ਖੇਤਰ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ</string>
+    <string name="enter_highway">ਕਿਰਪਾ ਕਰਕੇ ਹਾਈਵੇ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ</string>
+    <string name="enter_pincode">ਕਿਰਪਾ ਕਰਕੇ ਪਿੰਨਕੋਡ ਦਾਖਲ ਕਰੋ</string>
+    <string name="select_property_status">ਕਿਰਪਾ ਕਰਕੇ ਸੰਪਤੀ ਦੀ ਸਥਿਤੀ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="select_dhaba_image">ਕਿਰਪਾ ਕਰਕੇ ਢਾਬਾ  ਚਿੱਤਰ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="enter_bank_name">ਕਿਰਪਾ ਕਰਕੇ ਬੈਂਕ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ</string>
+    <string name="enter_gst_number">ਜੀਐਸਟੀ ਨੰਬਰ ਦਰਜ ਕਰੋ ਜੀ</string>
     <string name="add_new">ਨਵਾਂ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="enter_ifsc_code">ਕਿਰਪਾ ਕਰਕੇ IFSC ਕੋਡ ਦਰਜ ਕਰੋ</string>
+    <string name="enter_account_holder_name">ਕਿਰਪਾ ਕਰਕੇ ਖਾਤਾ ਧਾਰਕ ਦਾ ਨਾਮ ਦਰਜ ਕਰੋ</string>
+    <string name="choose_pan_card_photo">ਕਿਰਪਾ ਕਰਕੇ ਪੈਨ ਕਾਰਡ ਫੋਟੋ ਚੁਣੋ</string>
+    <string name="choose_food_license_option">ਕਿਰਪਾ ਕਰਕੇ ਫੂਡ ਲਾਇਸੈਂਸ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="select_license_photo">ਕਿਰਪਾ ਕਰਕੇ ਫੂਡ ਲਾਇਸੈਂਸ ਫੋਟੋ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="select_food_at_100">ਕਿਰਪਾ ਕਰਕੇ 100 ਤੇ ਭੋਜਨ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="select_ro_water_option">ਕਿਰਪਾ ਕਰਕੇ ਆਰਓ ਵਾਟਰ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="select_food_type">ਕਿਰਪਾ ਕਰਕੇ ਫੂਡ ਟਾਈਪ ਵਿਕਲਪ ਚੁਣੋ</string>
+    <string name="choose_atlease_one_photo">ਕਿਰਪਾ ਕਰਕੇ ਘੱਟੋ ਘੱਟ 1 ਫੂਡ ਫੋਟੋ ਚੁਣੋ</string>
+    <string name="choose_bed_charpai">ਕਿਰਪਾ ਕਰਕੇ Bed/Bunk ਵਿਕਲਪ ਨੂੰ ਚੂਸੋ</string>
+    <string name="choose_no_of_beds">ਕਿਰਪਾ ਕਰਕੇ ਬਿਸਤਰੇ ਦੀ ਗਿਣਤੀ ਚੁਣੋ</string>
+    <string name="choose_photo">ਕਿਰਪਾ ਕਰਕੇ ਇੱਕ ਫੋਟੋ ਚੁਣੋ</string>
+    <string name="choose_fan">ਕਿਰਪਾ ਕਰਕੇ ਪ੍ਰਸ਼ੰਸਕ ਵਿਕਲਪ ਚੁਣੋ</string>
+    <string name="choose_cooler">ਕਿਰਪਾ ਕਰਕੇ ਕੂਲਰ ਵਿਕਲਪ ਚੁਣੋ</string>
+    <string name="choose_enclosed">ਕਿਰਪਾ ਕਰਕੇ ਨੱਥੀ ਵਿਕਲਪ ਚੁਣੋ</string>
+    <string name="choose_if_open">ਕਿਰਪਾ ਕਰਕੇ ਚੁਣੋ ਕਿ ਕੀ ਇਹ ਖੁੱਲ੍ਹਾ ਹੈ</string>
+    <string name="choose_hot_water">ਕਿਰਪਾ ਕਰਕੇ ਹੌਟ ਵਾਟਰ ਬੈਗ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="choose_washroom_status">ਕਿਰਪਾ ਕਰਕੇ ਵਾਸ਼ਰੂਮ ਦੀ ਸਥਿਤੀ ਚੁਣੋ.</string>
+    <string name="choose_hot_and_cold_water">ਕਿਰਪਾ ਕਰਕੇ ਗਰਮ ਅਤੇ ਠੰਡੇ ਪਾਣੀ ਦਾ ਵਿਕਲਪ ਚੁਣੋ.</string>
+    <string name="choose_truck_show_clean">ਕਿਰਪਾ ਕਰਕੇ ਟਰੱਕ ਸ਼ੋਅ ਕਲੀਨ ਵਿਕਲਪ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_verification_photo">ਕਿਰਪਾ ਕਰਕੇ ਪੁਲਿਸ ਤਸਦੀਕ ਫੋਟੋ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_indoor_camera_photo">ਕਿਰਪਾ ਕਰਕੇ ਇਨਡੋਰ ਕੈਮਰੇ ਦੀਆਂ ਤਸਵੀਰਾਂ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_outdoor_camera_photo">ਕਿਰਪਾ ਕਰਕੇ ਆoਟਡੋਰ ਕੈਮਰੇ ਦੀਆਂ ਤਸਵੀਰਾਂ ਦੀ ਚੋਣ ਕਰੋ.</string>
+    <string name="choose_tower_light_photo">ਕਿਰਪਾ ਕਰਕੇ ਟਾਵਰ ਲਾਈਟ ਫੋਟੋ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="choose_bulb_light_photo">ਕਿਰਪਾ ਕਰਕੇ ਬਲਬ ਲਾਈਟ ਫੋਟੋ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="enter_bank_account_number">ਕਿਰਪਾ ਕਰਕੇ ਬੈਂਕ ਖਾਤਾ ਨੰਬਰ ਦਾਖਲ ਕਰੋ</string>
+    <string name="account_number">ਖਾਤਾ ਨੰਬਰ</string>
+    <string name="please_choose_address">ਕਿਰਪਾ ਕਰਕੇ ਪਤਾ ਚੁਣੋ.</string>
+    <string name="update_other_amen">ਹੋਰ ਸਹੂਲਤਾਂ ਨੂੰ ਅਪਡੇਟ ਕਰੋ</string>
 
 </resources>
