• Kindly shift the "Address" input field below the "Current location | Pick from map" button •	"In progress" status is to be changed to "In review" •	Address field is to be made editable  : Incase the user picks the location from map , and then edits the address , here he should get the confirmation message whether he wants to overwrite the address or not. •	On owner's details page , remove the address field and current location | Pick from map : Address will be captured only on dhaba details page •	On add new dhaba page, user should be able to toggle between the four steps from 1-4 •	After filling all the details , "Save dhaba" on the bank detaills page is to be renamed as "Submit for approval" •	On bank details page, SBI is auto selected by default. Use --select-- as placeholder

--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -327,5 +327,12 @@
     <string name="enter_valid_aadhar_number">ਕਿਰਪਾ ਕਰਕੇ ਇੱਕ ਵੈਧ ਆਧਾਰ ਕਾਰਡ ਨੰਬਰ ਦਾਖਲ ਕਰੋ.</string>
     <string name="no_cities_found">ਕਿਰਪਾ ਕਰਕੇ ਵੈਧ ਸ਼ਹਿਰ ਦਾ ਨਾਮ ਦਾਖਲ ਕਰੋ</string>
     <string name="skip">ਛੱਡੋ</string>
+    <string name="no_highway_found">ਕੋਈ ਹਾਈਵੇਅ ਨਹੀਂ ਮਿਲਿਆ</string>
+    <string name="choose_parking_photo">ਕਿਰਪਾ ਕਰਕੇ ਘੱਟੋ ਘੱਟ ਇੱਕ ਪਾਰਕਿੰਗ ਫੋਟੋ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="address_placement_confirmation">ਕੀ ਤੁਸੀਂ ਪਤੇ ਨੂੰ ਮੁੜ ਲਿਖਣਾ ਚਾਹੁੰਦੇ ਹੋ?</string>
+    <string name="choose_dhaba_location">ਕਿਰਪਾ ਕਰਕੇ ਢਾਬੇ ਦੀ ਜਗ੍ਹਾ ਚੁਣੋ.</string>
+    <string name="in_review">ਸਮੀਖਿਆ ਵਿੱਚ</string>
+    <string name="submit_for_approval">ਮਨਜ਼ੂਰੀ ਲਈ ਜਮ੍ਹਾਂ ਕਰੋ</string>
+    <string name="select_bank">ਬੈਂਕ ਦੀ ਚੋਣ ਕਰੋ</string>
 
 </resources>
