--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -342,4 +342,11 @@
     <string name="enter_valid_aadhar_number">कृपया एक मान्य आधार कार्ड नंबर दर्ज करें।</string>
     <string name="no_cities_found">कृपया मान्य शहर का नाम दर्ज करें</string>
     <string name="skip">छोड़ें</string>
+    <string name="no_highway_found">कोई राजमार्ग नहीं मिला</string>
+    <string name="choose_parking_photo">कृपया कम से कम एक पार्किंग चुनें फोटो</string>
+    <string name="address_placement_confirmation">क्या आप पते को अधिलेखित करना चाहते हैं?</string>
+    <string name="choose_dhaba_location">कृपया ढाबा स्थान चुनें।</string>
+    <string name="in_review">रिव्यू में</string>
+    <string name="submit_for_approval">अनुमोदन के लिए सबमिट करें</string>
+    <string name="select_bank">बैंक चुनें</string>
 </resources>
