--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -318,6 +318,11 @@
     <string name="skip">Skip</string>
     <string name="no_highway_found">No Highway Found</string>
     <string name="choose_parking_photo">Please choose at least one parking Photo</string>
+    <string name="address_placement_confirmation">Do you want to overwrite the address?</string>
+    <string name="choose_dhaba_location">Please choose dhaba location.</string>
+    <string name="in_review">In Review</string>
+    <string name="submit_for_approval">Submit for approval</string>
+    <string name="select_bank">Select Bank</string>
 
     <string-array name="select_state">
         <item>Select State</item>
