--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -349,4 +349,5 @@
     <string name="in_review">रिव्यू में</string>
     <string name="submit_for_approval">अनुमोदन के लिए सबमिट करें</string>
     <string name="select_bank">बैंक चुनें</string>
+    <string name="owner">मालिक</string>
 </resources>
