--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -324,6 +324,7 @@
     <string name="submit_for_approval">Submit for approval</string>
     <string name="select_bank">Select Bank</string>
     <string name="owner">Owner</string>
+    <string name="deletion_confirmation">Do you want to delete this dhaba?</string>
 
     <string-array name="select_state">
         <item>Select State</item>
