--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -325,6 +325,14 @@
     <string name="select_bank">Select Bank</string>
     <string name="owner">Owner</string>
     <string name="deletion_confirmation">Do you want to delete this dhaba?</string>
+    <string name="alternative_contact_person">Alternative Contact Person</string>
+    <string name="alternative_contact_number">Alternative Contact Number</string>
+    <string name="alternative_contact_designation">Alternative Contact Designation</string>
+    <string name="enter_contact_person">Please enter alternative contact person name.</string>
+    <string name="enter_alternative_number">Please enter alternative contact number.</string>
+    <string name="enter_alternative_contact_designation">Please enter alternative contact person designation.</string>
+    <string name="add_highway">Add this highway</string>
+    <string name="highway_confirmation">Do you want to add </string>
 
     <string-array name="select_state">
         <item>Select State</item>
