Bug Fixes and submit for approval function UX changes

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="appName">ट्रांसपोर्ट मॉल</string>
+    <string name="appName">ट्रांसपोर्ट मॉल पार्टनर</string>
     <string name="email">ईमेल </string>
     <string name="password">पासवर्ड</string>
     <string name="login">लॉग इन </string>
