--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="appName">ਟ੍ਰਾਂਸਪੋਰਟ ਮਾਲ</string>
+    <string name="appName">ਟ੍ਰਾਂਸਪੋਰਟ ਮਾਲ ਪਾਰਟਨਰ</string>
     <string name="email">"ਈਮੇਲ "</string>
     <string name="password">ਪਾਸਵਰਡ</string>
     <string name="login">ਲੌਗ ਇਨ</string>
