highway selection dialog -> added prefix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,6 +367,7 @@
     <string name="dhaba_mobile_number">Dhaba Mobile Number</string>
     <string name="dhaba_photo">Dhaba Photo</string>
     <string name="dhaba_video">Dhaba Video</string>
+    <string name="nh">NH</string>
 
     <string-array name="select_state">
         <item>Select State</item>
